# az

./: .gitignore  CMakeLists.txt  LICENSE  README.md  az.py  az_mod-workspace.toml  build.bat  build.sh  package.az  test_ast.dot  test_backend.bat  test_backend.sh  test_bootstrap.bat  test_bootstrap.sh  test_build.bat  test_build.sh  test_compiler.bat  test_compiler.sh  test_visualize.py
bootstrap/: README.md  az_compiler.py
compiler/: ast.az  codegen.az  codegen_c.py  error.az  lexer.az  main.az  module_system.az  parser.az  semantic.az  token.az
docs/: AST_VISUALIZATION.md  AZGC.md  MODERN_FEATURES.md  MODULE_SYSTEM.md  PYTHON_STYLE_SYNTAX.md  az_mod-package-manager.md  azgc-design.md  match_statement.md  os-development.md  ownership-and-gc.md  ownership-system.md  stdlib-organization.md
docs/architecture/: ARCHITECTURE.md  MLIR_IMPLEMENTATION.md  TECH_STACK.md
docs/assessments/: CAN_AZ_REPLACE_OTHERS.md  FINAL_PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READINESS_ASSESSMENT.md  PRODUCTION_READY_PLAN.md  PRODUCTION_READY_STATUS.md
docs/comparisons/: AZ_C3_ZIG_COMPARISON.md  AZ_VS_C3.md  AZ_VS_C_CPP_JAVA_COMPARISON.md  AZ_VS_ZIG.md  FEATURE_COMPARISON.md  LANGUAGE_COMPARISONS.md  PYTHON_MATCH_COMPARISON.md
docs/design/: AZ_MODULE_SYSTEM_STATUS.md  BILINGUAL_FEATURES.md  MATCH_CASE_SYNTAX.md  MEMORY_MANAGEMENT_ANALYSIS.md  MISSING_FEATURES_CHECKLIST.md
docs/guides/: BUILD_AND_RUN.md  MODULE_IMPLEMENTATION_GUIDE.md  QUICKSTART.md  QUICK_START_BOOTSTRAP.md  QUICK_USE_GUIDE.md
docs/reports/bootstrap/: BOOTSTRAP_PLAN.md  BOOTSTRAP_STATUS.md  BOOTSTRAP_SUCCESS.md
docs/reports/features/: ARRAY_STRUCT_COMPLETION_REPORT.md  AZ_FMT_IMPLEMENTATION.md  AZ_LSP_DESIGN.md  AZ_LSP_STATUS.md  BILINGUAL_IMPLEMENTATION_COMPLETE.md  COMPILER_BACKEND_COMPLETE.md  MATCH_CASE_SUMMARY.md  MATCH_IMPLEMENTATION.md  SEMANTIC_ANALYZER_COMPLETE.md
docs/reports/llvm-backend/: LLVM_BACKEND_DEBUGINFO_COMPLETE.md  LLVM_BACKEND_FINAL_REPORT.md  LLVM_BACKEND_JIT_COMPLETE.md  LLVM_BACKEND_PHASE1_COMPLETE.md  LLVM_BACKEND_PHASE1_TESTS_COMPLETE.md  LLVM_BACKEND_PHASE2_COMPLETE.md  LLVM_BACKEND_PHASE3_COMPLETE.md  (+2 more)
docs/status/: CURRENT_STATUS.md  CURRENT_STATUS_AND_USAGE.md  PROJECT_SUMMARY.md  STATUS.md
docs/summaries/: BREAKTHROUGH_ANNOUNCEMENT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETION_REPORT.md  CORE_FEATURES_TEST_REPORT.md  CRITICAL_IMPLEMENTATION_PLAN.md  FINAL_PROGRESS_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_UPDATE.md  FULL_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PROGRESS_UPDATE.md  PROJECT_COMPLETE_SUMMARY.md
examples/: actor_cluster_advanced_demo.az  actor_error_demo.az  actor_id_demo.az  actor_lifecycle_demo.az  actor_messaging_demo.az  actor_persistence_advanced_demo.az  actor_state_demo.az  actor_timer_advanced_demo.az  actor_virtual_demo.az  array_for_example.az  basic_demo.az  build_demo.bat  build_demo.sh  chinese_example.az  comprehensive_test.az  control_flow.az  current_features_demo.az  english_demo.az  features_demo.az  fibonacci.az  fixed_demo.az  function_demo.az  functions.az  hello.az  hello_compiled.az  match_case_example.az  match_example.az  minimal_demo.az  modern_features_demo.az  module_example.az  python_style_demo.az  simple_demo.az  simple_struct_demo.az  simple_test.az  stdlib_fs_demo.az  stdlib_full_demo.az  stdlib_math_demo.az  stdlib_string_demo.az  stdlib_test.az  stdlib_test.c  (+7 more)
include/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Backend/: Cache.cpp  CodeGenerator.cpp  CodeGenerator.h  DebugInfo.cpp  JIT.cpp  LLVMBackend.cpp  LLVMBackend.h  Linker.cpp  Linker.h  MLIRLowering.cpp  Optimizer.cpp  TargetManager.cpp  TargetManager.h
lib/Frontend/: AST.cpp  AST.h  ASTVisualizer.cpp  CMakeLists.txt  Lexer.cpp  Parser.cpp  Parser.h  Sema.cpp  Token.cpp
lib/MLIR/: MLIRGen.cpp
lib/Support/: Result.cpp
runtime/: az_runtime.c  az_runtime.h  azstd.c
src/: main.az
stdlib/: README.md  actor.az  actor_cluster.az  actor_cluster_advanced.az  actor_error.az  actor_lifecycle.az  actor_main.az  actor_messaging.az  actor_persistence.az  actor_persistence_advanced.az  actor_runtime.az  actor_state.az  actor_timer.az  actor_timer_advanced.az  actor_virtual.az  async.az  collections.az  collections_arraylist.az  collections_arraylist_gc.az  collections_complete.az  collections_hashmap.az  collections_hashset.az  collections_main.az  collections_vec.az  convert.az  di.az  error.az  fs.az  fs_complete.az  io.az  io_complete.az  linq.az  math.az  math_complete.az  mem.az  middleware.az  net.az  net_gc.az  os.az  os_complete.az  (+6 more)
test/: CMakeLists.txt  lexer_test.cpp  match_test.az  parser_test.cpp  sema_test.cpp  std_actor_test.az  std_arraylist_test.az  std_collections_test.az  std_fs_enhanced_test.az  std_fs_test.az  std_io_test.az  std_math_test.az  std_net_test.az  std_new_libs_test_runner.az  std_os_test.az  std_string_test.az  std_test_runner.az  std_time_test.az  std_toml_test.az
test/Backend/: CacheIntegrationTest.cpp  CodeGeneratorTest.cpp  DebugInfoTest.cpp  IntegrationTest.cpp  JITTest.cpp  MLIRLoweringTest.cpp  OptimizerTest.cpp
test/fixtures/: test_array.az  test_assignment.az  test_basic.az  test_chinese.az  test_complete.az  test_complete_simple.az  test_error.az  test_for.az  test_simple.az  test_simple_assign.az  test_struct.az  test_struct_simple.az
test/frontend/: complete_test.az  comptime_test.az  struct_enum_test.az  test_all_features.py  test_comptime.py  test_struct_enum.py
test/scripts/: test_simple_codegen.py
test/toolchain/: aot_test.az  args.az  hello.az  manual_test.py  simple_test.az  stdlib_test.az  test_aot_mold.py  test_implementation.py  test_toolchain.py  verify_implementation.py
tools/: CMakeLists.txt  ast_visualizer.py  az_build.py  az_cl  az_main.cpp  simple_azc.py  visualize_ast.cpp
tools/az_fmt/: QUICKSTART.md  README.md  STATUS.md  azfmt.py  azfmt.toml  azfmt_simple.py  test_azfmt.bat  test_azfmt.sh  test_unformatted.az
tools/az_lsp/: Cargo.toml  README.md
tools/az_lsp/src/: main.rs  server.rs
tools/az_mod/: Cargo.toml  README.md
tools/az_mod/src/: main.rs
(+5 files in other folders)
