[package]
name = "az_lsp"
version = "0.1.0"
edition = "2021"
authors = ["AZ Language Team"]
description = "Language Server Protocol implementation for AZ"
license = "MIT"
repository = "https://github.com/JuSanSuiYuan/az_lsp"
keywords = ["lsp", "language-server", "az", "ide"]
categories = ["development-tools"]

[dependencies]
# LSP
tower-lsp = "0.20"
lsp-types = "0.95"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
dashmap = "5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Parser (will be replaced with AZ parser)
tree-sitter = "0.20"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "az_lsp"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
