[package]
name = "az_mod"
version = "0.1.0"
edition = "2021"
authors = ["AZ Language Team"]
description = "AZ语言包管理器az_mod - pnpm风格的workspace支持"
license = "MulanPSL-2.0"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
git2 = "0.18"
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2.4"
sha2 = "0.10"
indicatif = "0.17"
colored = "2.1"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
